# vision3d

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  data_exploration.ipynb  pyproject.toml  requirements.txt
configs/: dummy.py  dummy_detr3d.py.py  mono_detr3d.py
docs/: setup.md
scripts/: convert_onnx.py  eval.py  generate_data_splits.py  train.py
vision3d/: __init__.py
vision3d/datasets/: __init__.py  detection3d_dataset.py
vision3d/engine/: evaluator.py  trainer.py
vision3d/hooks/: __init__.py  base.py  checkpoint_hook.py  loss_log_hook.py
vision3d/losses/: __init__.py  cross_entropy.py  multiloss_3d.py  multiloss_3d_obb.py
vision3d/metrics/: __init__.py  base.py  iou3d.py  maoe.py  mase.py  mate.py
vision3d/metrics/ops/: iou3d.py
vision3d/models/: __init__.py  base.py  dummy.py  dummy_detr3d.py  mono_detr3d.py
vision3d/models/modelling/: __init__.py
vision3d/models/modelling/decoders/: __init__.py  spatially_aware_transformer.py
vision3d/models/modelling/encoders/: __init__.py  efficientnet.py  resnet.py  rgb_encoder.py
vision3d/models/modelling/heads/: __init__.py  simple_bbox3d_head.py  simple_seg_head.py
vision3d/models/modelling/utils/: __init__.py  pos_embed.py
vision3d/models/ops/: setup.py  test.py
vision3d/models/ops/functions/: ms_deform_attn_func.py
vision3d/models/ops/modules/: __init__.py  ms_deform_attn.py
vision3d/utils/: __init__.py  assignment.py  bbox_converter.py  build.py  config.py  logger.py  logging.py  misc.py  registry.py  wandb.py
