[project]
name = "vision3d"
dynamic = ["version"]
description = "ToDO"
authors = [
    { name = "Volodymyr Havrylov", email = "volodymyr.havrylov01@gmail.com" },
]
requires-python = ">=3.10"

dependencies = []
readme = "README.md"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vision3d"]

[tool.setuptools.dynamic]
version = { attr = "vision3d.__version__" }